# accent

./: .env  .gitattributes  .gitignore  README.md  app.py  complete_run.py  detector_server.py  intent_resolver.py  label_elements.py  llm.py  main.py  model.pth  pyproject.toml  requirements.txt  resolve_intent.py  run_pipeline.py  test.py
.claude/skills/addnewstage/: SKILL.md
.claude/skills/intentresolver/: SKILL.md
app/: Package.swift  README.md
app/Sources/ScreenIntentApp/: Info.plist  main.swift
scripts/: start.sh
src/orchestrator/: __init__.py
src/orchestrator/api/: run.py  server.py
src/orchestrator/chains/: intent_resolver_chain.py
src/orchestrator/core/: context.py  kernel.py  llm.py  middleware.py  stage.py
src/orchestrator/runtime/: builder.py  orchestrator.py
src/orchestrator/stages/: analyzer.py  intent_resolver.py  langchain_stage.py  summarizer.py
src/orchestrator/tools/: search.py
src/orchestrator/utils/: errors.py  logging.py  schemas.py  tracing.py
test_outputs/: conflict_resolution.json  detections.json  element_ids.json  final_action_buttons.json  llm_chat_log.json  llm_semantics.json  llms.json  summary.txt
tests/: test_context.py  test_kernel.py
